--- a/index.html
+++ b/index.html
@@ -472,12 +472,12 @@
                                 </div>
                                 <div class="prt_services_slider_text prt_img_click " id="3 ">
                                     <img src="http://placehold.it/86X100 " alt="Service icon ">
-                                    <h4>Applied Movement Neurology & Trauma Release </h4>
+                                    <h4>Trauma Release </h4>
                                     <p>Treating the Bio-Electrical System. Live Better </p>
                                 </div>
                                 <div class="prt_services_slider_text prt_img_click " id="4 ">
-                                    <img src="http://placehold.it/86X100 " alt="Service icon ">
-                                    <h4>Provide Workshops, Retreats & Training </h4>
+                                    <img src="images/mini-certificate-86x100.jpg" alt="Coaching certificate">
+                                    <h4>Workshops & Training </h4>
                                     <p>Bringing Holistic Therapy to the 21st Century. 5-Day Residential Courses. </p>
                                 </div>
                             </div>
