--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-7 col-sm-10 col-xs-12 col-lg-offset-6 col-md-offset-5 col-sm-offset-2 col-xs-offset-0">
-                        <h1>I`m Natasha Minnikin</h1>
+                        <div class="typed-strings">
+                            <h1>I'm Natasha Minnikin</h1>
+                            <h1>I'm The Mind Physio</h1>
+                        </div>
+                        <h1 class="typed"></h1>
                     </div>
                 </div>
             </div>
@@ -71,7 +75,11 @@
                             <div class="prt_heading_wrapper_2">
                                 <div class="prt_heading prt_toppadder50">
                                     <h1>About ME</h1>
-                                    <p>Who Am i</p>
+                                    <div class="typed-strings">
+                                        <p>WHo AM i</p>
+                                        <p>Know more</p>
+                                    </div>
+                                    <p class="typed"></p>
                                 </div>
                             </div>
                             <div class="prt_about_details">
@@ -352,7 +360,11 @@
                         <div class="prt_heading_wrapper">
                             <div class="prt_heading">
                                 <h1>get in touch</h1>
-                                <p>contact me</p>
+                                <div class="typed-strings">
+                                    <p>contact us</p>
+                                    <p>message us</p>
+                                </div>
+                                <p class="typed"></p>
                             </div>
                         </div>
                     </div>
@@ -446,7 +458,11 @@
                             <div class="prt_heading_wrapper">
                                 <div class="prt_heading">
                                     <h1>What I do</h1>
-                                    <p>take a look</p>
+                                    <div class="typed-strings">
+                                        <p>take a look</p>
+                                        <p>have a look</p>
+                                    </div>
+                                    <p class="typed"></p>
                                 </div>
                             </div>
                         </div>
@@ -461,22 +477,22 @@
                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                             <div class="prt_services_slider_box">
                                 <div class="prt_services_slider_text prt_img_click active" id="1">
-                                    <img src="http://placehold.it/86X100" alt="Service icon">
+                                    <img src="images/brain-Cogs-teal.png" alt="Service icon">
                                     <h4>1-2-1 Coaching</h4>
                                     <p>Treating the Conscious Mind. Think Better </p>
                                 </div>
                                 <div class="prt_services_slider_text prt_img_click" id="2">
-                                    <img src="images/hypnosis-96x100.jpg" alt="Hypnotherapy courses">
+                                    <img src="images/brain-jigsaw-hypnosis.png" alt="Hypnotherapy courses">
                                     <h4>Hypnotherapy </h4>
                                     <p>Treating the Unconscious Mind. Feel Better </p>
                                 </div>
                                 <div class="prt_services_slider_text prt_img_click " id="3 ">
-                                    <img src="http://placehold.it/86X100 " alt="Service icon ">
+                                    <img src="images/brain-Cogs-teal.png" alt="Service icon ">
                                     <h4>Trauma Release </h4>
                                     <p>Treating the Bio-Electrical System. Live Better </p>
                                 </div>
                                 <div class="prt_services_slider_text prt_img_click " id="4 ">
-                                    <img src="images/mini-certificate-86x100.jpg" alt="Coaching certificate">
+                                    <img src="images/brain-teal-courses.png" alt="Coaching certificate">
                                     <h4>Workshops & Training </h4>
                                     <p>Bringing Holistic Therapy to the 21st Century. 5-Day Residential Courses. </p>
                                 </div>
@@ -517,9 +533,13 @@
                     <div class="row ">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
                             <div class="prt_heading_wrapper ">
-                                <div class="prt_heading ">
+                                <div class="prt_heading">
                                     <h1>My Skills</h1>
-                                    <p>Expert in</p>
+                                    <div class="typed-strings">
+                                        <p>Expert in</p>
+                                        <p>experience in</p>
+                                    </div>
+                                    <p class="typed"></p>
                                 </div>
                             </div>
                         </div>
@@ -549,9 +569,13 @@
                     <div class="row ">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
                             <div class="prt_heading_wrapper ">
-                                <div class="prt_heading ">
+                                <div class="prt_heading">
                                     <h1>Clients</h1>
-                                    <p>Worked With</p>
+                                    <div class="typed-strings">
+                                        <p>Worked With</p>
+                                        <p>happy With</p>
+                                    </div>
+                                    <p class="typed"></p>
                                 </div>
                             </div>
                         </div>
@@ -609,9 +633,13 @@
                 <div class="row ">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
                         <div class="prt_heading_wrapper ">
-                            <div class="prt_heading ">
+                            <div class="prt_heading">
                                 <h1>portfolio</h1>
-                                <p>MY work</p>
+                                <div class="typed-strings">
+                                    <p>MY work</p>
+                                    <p>my passion</p>
+                                </div>
+                                <p class="typed"></p>
                             </div>
                         </div>
                     </div>
@@ -813,6 +841,7 @@
     <script type="text/javascript " src="js/plugin/countto/jquery.countTo.js "></script>
     <script type="text/javascript " src="js/plugin/countto/jquery.appear.js "></script>
     <script type="text/javascript " src="js/circles.js "></script>
+    <script type="text/javascript" src="js/typed.min.js"></script>
     <script type="text/javascript " src="js/custom.js "></script>
     <!--Main js file End-->
 </body>
