--- a/index.html
+++ b/index.html
@@ -468,16 +468,16 @@
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                             <div class="prt_services_slider_imgs">
-                                <img class="img_1 active" src="http://placehold.it/470X390" alt="Service">
-                                <img class="img_2" src="http://placehold.it/470X390" alt="Service">
-                                <img class="img_3" src="http://placehold.it/470X390" alt="Service">
-                                <img class="img_4" src="http://placehold.it/470X390" alt="Service">
+                                <img class="img_1 active" src="images/Coaching-Graphic.png" alt="Service">
+                                <img class="img_2" src="images/hypnosis-Graphic.png" alt="Service">
+                                <img class="img_3" src="images/trauma-Graphic.png" alt="Service">
+                                <img class="img_4" src="images/training-Graphic.png" alt="Service">
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                             <div class="prt_services_slider_box">
                                 <div class="prt_services_slider_text prt_img_click active" id="1">
-                                    <img src="images/brain-Cogs-teal.png" alt="Service icon">
+                                    <img src="images/brain-cog-coaching.png" alt="Coacing courses">
                                     <h4>1-2-1 Coaching</h4>
                                     <p>Treating the Conscious Mind. Think Better </p>
                                 </div>
