added client dets

--- a/index.html
+++ b/index.html
@@ -534,71 +534,85 @@
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
                             <div class="prt_heading_wrapper ">
                                 <div class="prt_heading ">
-                                    <h1>My Skills</h1>
-                                    <div class="typed-strings ">
-                                        <p>Expert in</p>
-                                        <p>experience in</p>
+                                    <h1>What I do</h1>
+                                    <div class="typed-strings">
+                                        <p>Consultant</p>
+                                        <p>For Business</p>
                                     </div>
-                                    <p class="typed "></p>
+                                    <p class="typed"></p>
                                 </div>
                             </div>
                         </div>
                         <div id="canvas ">
-                            <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 text-center ">
-                                <div class="circle " id="circles-1 "></div>
-                                <h5>Photoshop</h5>
-                            </div>
-                            <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 text-center ">
-                                <div class="circle " id="circles-2 "></div>
-                                <h5>Illustrator</h5>
-                            </div>
-                            <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 text-center ">
-                                <div class="circle " id="circles-3 "></div>
-                                <h5>Html & Css</h5>
-                            </div>
-                            <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 text-center ">
-                                <div class="circle " id="circles-4 "></div>
-                                <h5>WordPress</h5>
-                            </div>
+                            <p>Whether you need a coaching programme for your team or you're looking for an ad-hoc member of staff who can slot into your business with minimal fuss, my training and experience means you can diversify and expand without having
+                                the expense of recruiting, training or consistent employment. I can provide you with locum-style support for those bespoke events, making it easy to propel your business forward, seamlessly. </p>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="prt_client_slider_wrapper ">
-                <div class="container ">
-                    <div class="row ">
-                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
-                            <div class="prt_heading_wrapper ">
+            <div class="container">
+                <div class="row">
+                    <div class="prt_about_experience_wrapper prt_bottompadder60">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                            <div class="prt_heading_wrapper">
                                 <div class="prt_heading ">
-                                    <h1>Clients</h1>
-                                    <div class="typed-strings ">
-                                        <p>Worked With</p>
-                                        <p>happy With</p>
+                                    <h1>Already Onboard</h1>
+                                    <div class="typed-strings">
+                                        <p>Working With</p>
+                                        <p>Consulting For</p>
                                     </div>
-                                    <p class="typed "></p>
+                                    <p class="typed"></p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
-                            <div class="prt_client_slider ">
-                                <div class="owl-carousel owl-theme ">
-                                    <div class="item ">
-                                        <a href=" "><img src="http://placehold.it/170X110 " alt="Client "></a>
+                            <div class="prt_about_experience">
+                                <div class="row">
+                                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                        <div class="prt_about_experiencebox">
+                                            <div class="prt_about_experience_year">
+                                                <h1>NLP </h1>
+                                                <h4>Trainer</h4>
+                                            </div>
+                                            <div class="prt_about_experience_info">
+                                                <h4><a href="https://www.pq-performance.com">PQ Performance</a></h4>
+                                                <p>Supporting this high performance team in their vision to expand their training to Barcelona and Dubai, by providing accredited NLP training. </p>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="item ">
-                                        <a href=" "><img src="http://placehold.it/170X110 " alt="Client "></a>
+                                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                        <div class="prt_about_experiencebox">
+                                            <div class="prt_about_experience_year">
+                                                <h1>1-2-1</h1>
+                                                <h4>Coaching</h4>
+                                            </div>
+                                            <div class="prt_about_experience_info">
+                                                <h4><a href="https://threesixtyrehab.com">Three Sixty rehab</a></h4>
+                                                <p>This Modern Movement Clinic knows the significance of the Mind-Body connection when eliminating chronic conditions; I provide bespoke cognitive coaching support for their clients. </p>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="item ">
-                                        <a href=" "><img src="http://placehold.it/170X110 " alt="Client "></a>
+                                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                        <div class="prt_about_experiencebox">
+                                            <div class="prt_about_experience_year">
+                                                <h1>MOD</h1>
+                                                <h4>Trainer</h4>
+                                            </div>
+                                            <div class="prt_about_experience_info">
+                                                <h4>Staff Development Programme</h4>
+                                                <p>Providing accredited coaching and NLP training to the Armed Forces both home and abroad, to promote a culture of progression, self-regulation and awareness. </p>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="item ">
-                                        <a href=" "><img src="http://placehold.it/170X110 " alt="Client "></a>
-                                    </div>
-                                    <div class="item ">
-                                        <a href=" "><img src="http://placehold.it/170X110 " alt="Client "></a>
-                                    </div>
-                                    <div class="item ">
-                                        <a href=" "><img src="http://placehold.it/170X110 " alt="Client "></a>
+                                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                        <div class="prt_about_experiencebox">
+                                            <div class="prt_about_experience_year">
+                                                <h1>YOU</h1>
+                                                <h4>Consultant</h4>
+                                            </div>
+                                            <div class="prt_about_experience_info">
+                                                <h4>Immediate Solutions </h4>
+                                                <p>Whether you're looking for a workshop, training course or another pair of hands to run your training while you focus on your next stage of development, I can help you. Get in touch to discuss your needs.</p>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
