--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
                                 <h5 class="card-title ">Are you are Master Builder?</h5>
                                 <p class="card-text ">I absolutely love Freddy Mercury! The guy is a musical legend (in my world!); within just a first few bars of any Queen song and I’ve either got goose-bumps or I’ve personified Freddy himself, attempting my finest falsetto
                                     while struggling to actually vacuum the lounge carpet…. </p>
-                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">Read More</button>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#masterBuilderModal">Read More</button>
 
                             </div>
                         </div>
@@ -676,7 +676,7 @@
                                 <h5 class="card-title ">Failure is Fantastic!</h5>
                                 <p class="card-text ">Failure is fantastic! That’s not exactly something you hear every day, but it that doesn’t make it any less true, depending of course on how you’ve programmed your unconscious. For you it may just be another word, but to
                                     some it conjures up a whole Pandora’s Box of emotions and experiences, and yet that needn’t have to be the case. Failure after all, is just a word...</p>
-                                <a href="# " class="btn btn-primary ">Read More</a>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#fantasticFailure">Read More</button>
                             </div>
                         </div>
                     </div>
@@ -687,7 +687,7 @@
                                 <h5 class="card-title ">Time. A Finite Resource.</h5>
                                 <p class="card-text ">Time is running out! There’s simply not enough of it to go around. Work is increasingly more demanding, whether that’s at home or ‘at the office’; the children need chauffeuring, emails need organising, the clothes won’t
                                     wash themselves and if you think I’m slaving over a hot stove at the end of the day then you must be off your rocker, let alone exercise thank you...</p>
-                                <a href="# " class="btn btn-primary ">Read More</a>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#finiteTime">Read More</button>
                             </div>
                         </div>
                     </div>
@@ -725,7 +725,113 @@
     <script type="text/javascript " src="js/custom.js "></script>
     <!--Main js file End-->
 
-    <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+    <div id="masterBuilderModal" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Are you a Master Builder?</h4>
+                </div>
+                <div class="modal-body">
+                    <p class="lead">I absolutely love Freddy Mercury! The guy is a musical legend (in my world!); within just a first few bars of any Queen song and I’ve either got goose-bumps or I’ve personified Freddy himself, attempting my finest falsetto while struggling
+                        to actually vacuum the lounge carpet…. A relatively unknown Queen song came up on my playlist today from The Works album, you may know it, it’s called ‘Is this the World We Created…?’. It got me thinking about some wise words I
+                        once read…</p>
+                    =
+                    <p>Mohammed created a world. Freud created a world. Tolkien created a world. McKinsey created a world. Bill Gates created a world. Can I too create a world? The German company Tchibo uses the advertising slogan “Every week a new world”.
+                        New worlds are indeed created every week. Most of them are not very original; they swim in the wake of the established worlds and do not gain any traction. What kind of world have you created? A philosophical world? A spiritual
+                        world? A commercial world? A mathematical world? An aesthetic world? A material world (I said world, not girl… before you start power grabbing too 😉), a communicative world? A fun world…? You might think to yourself “But I haven’t
+                        created any world at all!”. I don’t believe that for a second. As soon as you look at something – anything – and inadvertently think of something new, you start to create a world.</p>
+                    =
+                    <p>It’s very natural to create, but sometimes we develop filters; we only ever see the same materials, and almost overlook the beautiful, diverse selection of resources that are really there. When we begin to realise that those filters
+                        aren’t fixed, that you can choose to replace them, your world becomes a playground of creative wonder; and the materials… anything & everything! There really is nothing you can’t create! What filters have you developed? What materials
+                        are you choosing to build your world with? Do you know? Have you ever stopped to think about it? NLP offers us an incredible opportunity to bring our unconscious filters into our awareness. To identify the patterns of thinking
+                        we’ve chosen to adopt over years of life experience, emotions and challenges, that have helped us move forward. And that’s just it, we’re constantly moving forward, and those filters that helped serve us back then may just be the
+                        filters that are blocking our view of a new, exciting and fulfilled world that we don’t realise is available to us. </p>
+
+                    <p>
+                        Changing your filters: Things you can do now: 1. Be aware. Possibly one of the most powerful things you can do in the first instance; plus, it’s free! Start to become aware of the thought patterns you have; the cognitive biases that kick in when something
+                        unwanted occurs, or when you find yourself saying ‘this always happens…’. 2. Start to notice the language you use. The words we choose to use can be a great insight into the filters we’re wearing. Faulty language patterns such
+                        as ‘always’ and ‘never’, are reinforcing the unconscious programming that the ‘art of the possible’ isn’t possible, and yet without this, how can we create a new world…? 3. Find your Inner Scholar. Help your unconscious mind prune
+                        away unwanted pathways by looking for the balance in your programming. Now you’ve identified your own faulty language patterns take time to reset the balance and find the evidence to support the opposite! You’ll soon notice that
+                        ‘always’ may change to ‘often’, and ‘never’ becomes ‘occasionally’; this may not seem like much to you consciously, but with just a few linguistic changes you’re showing the unconscious mind that ‘often’ isn’t ‘always’… which means
+                        you’ve just opened up the ‘art of the possible…’. Awareness, Language and Challenge are powerful agents to change your filters. Remember, you can create the world you want; anything is possible with the right filters.
+                    </p>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="fantasticFailure" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title text-primary" id="myModalLabel">Failure is Fantastic</h4>
+                </div>
+                <div class="modal-body">
+                    <p class="drop-cap">
+                        That’s not exactly something you hear every day, but that doesn’t make it any less true, depending of course on how you’ve programmed your unconscious. For you it may just be another word, but to some it conjures up a whole Pandora’s Box of emotions and
+                        experiences, and yet that needn’t have to be the case. Failure after all, is just a word. </p>
+
+                    <p>The vital thing to remember is that language, and the emotional attachment we put on it, is changeable. This is important, especially if some words make you feel a certain way; great if that’s positive, but not so great if they encourage
+                        unresourceful physical changes, such as frowning, increased blood pressure, or a general state of nervousness. This type of body language is typical of our fight or flight responses – essential if we really are in danger, but not
+                        so useful if we are not actually under threat. Think of it this way, if our verbal language can affect our body language, and our body language affects our hormonal responses (fight or flight is an adrenal response; effectively
+                        hormones helping us ‘survive’ at a time of need), then we really do need to be careful about what we say… or more importantly, about the emotional attachment we put onto those words.
+                    </p>
+
+                    <blockquote>
+                        <p class=text-primary>
+                            “BE MINDFUL ABOUT THE EMOTIONAL ATTACHMENT YOU PUT IN TO YOUR WORDS”.
+                        </p>
+                    </blockquote>
+
+                    <p>
+                        So, is failure really that bad? It certainly doesn’t have to be. The great thing is you have control over what language you use, and what attachments you link to them. Is it really a disaster when you’re 5 minutes late (switch on the news and you’ll soon
+                        find an event worthy of that word).
+                    </p>
+
+                    <p>
+                        The NLP Communication Model is an incredible guide that can show you how our words, and in particular the meaning we’ve attached to our words, can significantly affect us on a physical and psychological level. You’ve no doubt experienced the effects that
+                        a rogue thought has had on your physiology, or indeed enjoyed the incredible contortions we’re able to adopt when remembering a particularly humorous memory! But what’s not so commonly considered is the phenomenon that our physiology
+                        also affects our thoughts. Multiple studies have shown that it’s not just the brain which is responsible for the way we think and feel; around 75% of the information our brain uses is delivered by the body (afferent). That means
+                        the way you stand, how you hold yourself, the micro expressions on your face, they are all tiny pieces of data that ultimately tell the brain how you’re feeling, not the other way round! The brain, as incredible as it is, is still
+                        just like a central processing unit; it receives the information from our physiology and uses this to determine whether or not we need to fight, flee or freeze. If you want to rapidly change the way you’re thinking, especially
+                        in response to failure and indeed stress, then start with your physiology.
+                    </p>
+
+                    <strong>Three ways to hijack your thoughts:</strong>
+                    <ol>
+                        <li>
+                            <strong>Breathe!</strong> From yoga buffs to athletes, the science of effective breathing has become part and parcel of many routines, but if you think it’s all a bit ‘airy-fairy’ then consider this: how slow and controlled
+                            is our breathing when faced with a real fight or flight situation? The answer of course is that it isn’t! So how better to override the brain from going into stress by sending it information that your breathing is cool, calm
+                            and relaxed and therefore they can’t be any external threat. If you can manage 4 breaths in, hold for 4 seconds, and exhale for 4 seconds, then you’re doing a grand job of influencing the brain to relax.
+                        </li>
+
+                        <li>
+                            <strong>Body Scan.</strong> Those mindfulness gurus had it right all along… when we’re experiencing heightened levels of stress our muscle tone is affected. We’re all different, but we will be holding tension somewhere. Conducting
+                            a 2-minute body scan, starting from the top of the head and working your way down to your feet, and relaxing your muscles as you scan, will send important information via the vagus nerve to your brain that the body is relaxed
+                            and not experiencing tension. The brain interprets signals like this as a sign for being safe, thereby alleviating the need to release adrenaline into the system.
+                        </li>
+
+                        <li>
+                            Practice your NLP techniques. Having a good understanding of NLP techniques and their theory, will help you better manage your emotional triggers and responses. Over time this will lead to a rewiring of the mind and a powerful change to your thoughts,
+                            feelings and behaviour. If you haven’t completed your training yet, then start by assessing your emotional attachments to words that spike your emotions. Remember, you assigned the emotions to those words, and you can re-assign
+                            them.
+                        </li>
+                    </ol>
+                    <blockquote class="blockquote-reverse">
+                        <p>Failure is unimportant; it takes courage to make mistakes</p>
+                        <footer>Charlie Chaplin</footer>
+                    </blockquote>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="finiteTime" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -742,18 +848,7 @@
                         world? A commercial world? A mathematical world? An aesthetic world? A material world (I said world, not girl… before you start power grabbing too 😉), a communicative world? A fun world…? You might think to yourself “But I haven’t
                         created any world at all!”. I don’t believe that for a second. As soon as you look at something – anything – and inadvertently think of something new, you start to create a world.</p>
                     =
-                    <p>It’s very natural to create, but sometimes we develop filters; we only ever see the same materials, and almost overlook the beautiful, diverse selection of resources that are really there. When we begin to realise that those filters
-                        aren’t fixed, that you can choose to replace them, your world becomes a playground of creative wonder; and the materials… anything & everything! There really is nothing you can’t create! What filters have you developed? What materials
-                        are you choosing to build your world with? Do you know? Have you ever stopped to think about it? NLP offers us an incredible opportunity to bring our unconscious filters into our awareness. To identify the patterns of thinking
-                        we’ve chosen to adopt over years of life experience, emotions and challenges, that have helped us move forward. And that’s just it, we’re constantly moving forward, and those filters that helped serve us back then may just be the
-                        filters that are blocking our view of a new, exciting and fulfilled world that we don’t realise is available to us. </p>
 
-                    Changing your filters: Things you can do now: 1. Be aware. Possibly one of the most powerful things you can do in the first instance; plus, it’s free! Start to become aware of the thought patterns you have; the cognitive biases that kick in when something
-                    unwanted occurs, or when you find yourself saying ‘this always happens…’. 2. Start to notice the language you use. The words we choose to use can be a great insight into the filters we’re wearing. Faulty language patterns such as ‘always’
-                    and ‘never’, are reinforcing the unconscious programming that the ‘art of the possible’ isn’t possible, and yet without this, how can we create a new world…? 3. Find your Inner Scholar. Help your unconscious mind prune away unwanted
-                    pathways by looking for the balance in your programming. Now you’ve identified your own faulty language patterns take time to reset the balance and find the evidence to support the opposite! You’ll soon notice that ‘always’ may change
-                    to ‘often’, and ‘never’ becomes ‘occasionally’; this may not seem like much to you consciously, but with just a few linguistic changes you’re showing the unconscious mind that ‘often’ isn’t ‘always’… which means you’ve just opened
-                    up the ‘art of the possible…’. Awareness, Language and Challenge are powerful agents to change your filters. Remember, you can create the world you want; anything is possible with the right filters.
 
                 </div>
                 <div class="modal-footer">
@@ -763,7 +858,6 @@
         </div>
     </div>
 
-    </div>
 </body>
 
 </html>
